--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,15 @@
     "require": {
         "php": ">=7.2.0",
         "php-http/client-common": "^2.0",
-        "php-http/discovery": "^1.7"
+        "php-http/discovery": "^1.7",
+        "jms/serializer": "^3.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.4",
         "phpunit/phpunit": "~8.2",
-        "php-http/guzzle6-adapter": "^2.0"
+        "php-http/guzzle6-adapter": "^2.0",
+        "doctrine/cache": "^1.8",
+        "symfony/yaml": "^4.3"
     },
     "scripts": {
         "fix-style": [
