--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,8 +15,8 @@
             verbose="false"
     >
     <php>
-        <env name="ENDPOINT" value="https://testapi.multisafepay.com/v1/json"/>
-        <env name="API_KEY" value="c8201ce5f40104e754219d448a44d43f36041ef1"/>
+        <env name="ENDPOINT" value=""/>
+        <env name="API_KEY" value=""/>
     </php>
 
     <testsuites>
