--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=7.2.0",
         "php-http/client-common": "^2.0",
-        "php-http/discovery": "^1.7",
+        "php-http/discovery": "~1.0",
         "jms/serializer": "^3.1"
     },
     "require-dev": {
