--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=7.2.0",
         "php-http/client-common": "^2.0",
         "php-http/discovery": "~1.0",
-        "jms/serializer": "^3.1"
+        "jms/serializer": "^2.0 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.4",
