--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,15 @@
 {
     "name": "etrias/multisafepay-connector",
     "description": "Connector to MultiSafePay connector",
+    "require": {
+        "php": "^7.2",
+        "php-http/client-common": "^2.0",
+        "php-http/discovery": "^1.0",
+        "jms/serializer": "^3.0"
+    },
     "autoload": {
         "psr-4": {
             "Etrias\\MultiSafePayConnector\\": "src/"
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Etrias\\MultiSafePayConnector\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=7.2.0",
-        "php-http/client-common": "^2.0",
-        "php-http/discovery": "~1.0",
-        "jms/serializer": "^2.0 || ^3.0"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.4",
-        "phpunit/phpunit": "~8.2",
-        "php-http/guzzle6-adapter": "^2.0",
-        "doctrine/cache": "^1.8",
-        "symfony/yaml": "^4.3"
-    },
-    "scripts": {
-        "fix-style": [
-            "vendor/bin/php-cs-fixer fix --diff --show-progress run-in"
-        ]
-    },
-    "authors": [
-        {
-            "name": "Christ-Jan",
-            "email": "christ-jan@etrias.nl"
-        }
-    ],
-    "minimum-stability": "stable"
+    }
 }
