--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Connector to MultiSafePay connector",
     "require": {
         "php": "^7.2",
+        "jms/serializer": "^3.0",
         "php-http/client-common": "^2.0",
-        "php-http/discovery": "^1.0",
-        "jms/serializer": "^3.0"
+        "php-http/discovery": "^1.0"
     },
     "autoload": {
         "psr-4": {
