--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "etrias/multisafepay-connector",
     "description": "Connector to MultiSafePay connector",
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.1",
         "jms/serializer": "^3.0",
         "php-http/client-common": "^2.0",
         "php-http/discovery": "^1.0"
